# HU-Vision-1516-Base

./: .gitignore  CMakeLists.txt
source/ExternalDLL/ExternalDLL/: CMakeLists.txt  DefaultExtraction.cpp  DefaultLocalization.cpp  HereBeDragons.cpp  ImageFactory.cpp  ImageIO.cpp  IntensityImagePrivate.cpp  Main.cpp  Point2D.h  PostProcessing.cpp  RGBImagePrivate.cpp  Representation.cpp  export.h
