cmake_minimum_required(VERSION 3.5)
project(HU_Vision_1516_Base)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cv.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cv.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cvaux.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cvaux.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cvwimage.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cxcore.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cxcore.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cxeigen.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/cxmisc.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/highgui.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv/ml.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/calib3d/calib3d.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/contrib/contrib.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/contrib/detection_based_tracker.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/contrib/hybridtracker.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/contrib/openfabmap.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/contrib/retina.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/affine.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/core.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/core_c.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/cuda_devptrs.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/devmem2d.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/eigen.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/gpumat.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/internal.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/mat.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/opengl_interop.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/opengl_interop_deprecated.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/operations.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/types_c.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/version.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/core/wimage.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/features2d/features2d.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/all_indices.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/allocator.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/any.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/autotuned_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/composite_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/config.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/defines.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/dist.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/dummy.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/dynamic_bitset.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/flann.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/flann_base.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/general.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/ground_truth.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/hdf5.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/heap.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/hierarchical_clustering_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/index_testing.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/kdtree_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/kdtree_single_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/kmeans_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/linear_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/logger.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/lsh_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/lsh_table.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/matrix.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/miniflann.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/nn_index.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/object_factory.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/params.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/random.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/result_set.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/sampling.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/saving.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/simplex_downhill.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/flann/timer.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/detail/color_detail.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/detail/reduce.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/detail/reduce_key_val.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/detail/transform_detail.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/detail/type_traits_detail.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/detail/vec_distance_detail.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/block.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/border_interpolate.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/color.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/common.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/datamov_utils.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/dynamic_smem.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/emulation.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/filters.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/funcattrib.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/functional.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/limits.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/reduce.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/saturate_cast.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/scan.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/simd_functions.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/static_check.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/transform.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/type_traits.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/utility.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/vec_distance.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/vec_math.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/vec_traits.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/warp.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/warp_reduce.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/device/warp_shuffle.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/devmem2d.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/gpu.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/gpumat.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/gpu/stream_accessor.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/highgui/cap_ios.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/highgui/highgui.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/highgui/highgui_c.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/highgui/ios.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/imgproc/imgproc.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/imgproc/imgproc_c.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/imgproc/types_c.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/legacy/blobtrack.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/legacy/compat.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/legacy/legacy.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/legacy/streams.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ml/ml.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/nonfree/features2d.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/nonfree/gpu.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/nonfree/nonfree.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/nonfree/ocl.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/objdetect/objdetect.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ocl/matrix_operations.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ocl/ocl.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/photo/photo.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/photo/photo_c.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/autocalib.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/blenders.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/camera.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/exposure_compensate.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/matchers.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/motion_estimators.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/seam_finders.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/util.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/util_inl.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/warpers.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/detail/warpers_inl.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/stitcher.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/stitching/warpers.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/superres/optical_flow.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/superres/superres.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ts/gpu_perf.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ts/gpu_test.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ts/ts.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ts/ts_gtest.h
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/ts/ts_perf.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/video/background_segm.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/video/tracking.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/video/video.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/deblurring.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/fast_marching.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/fast_marching_inl.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/frame_source.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/global_motion.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/inpainting.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/log.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/motion_stabilizing.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/optical_flow.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/stabilizer.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/videostab/videostab.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/opencv.hpp
    source/ExternalDLL/ExternalDLL/OpenCV/include/opencv2/opencv_modules.hpp
    source/ExternalDLL/ExternalDLL/Algorithm.h
    source/ExternalDLL/ExternalDLL/DefaultExtraction.cpp
    source/ExternalDLL/ExternalDLL/DefaultExtraction.h
    source/ExternalDLL/ExternalDLL/DefaultLocalization.cpp
    source/ExternalDLL/ExternalDLL/DefaultLocalization.h
    source/ExternalDLL/ExternalDLL/DefaultPreProcessing.cpp
    source/ExternalDLL/ExternalDLL/DefaultPreProcessing.h
    source/ExternalDLL/ExternalDLL/DLLExecution.cpp
    source/ExternalDLL/ExternalDLL/DLLExecution.h
    source/ExternalDLL/ExternalDLL/export.cpp
    source/ExternalDLL/ExternalDLL/export.h
    source/ExternalDLL/ExternalDLL/Extraction.h
    source/ExternalDLL/ExternalDLL/Feature.cpp
    source/ExternalDLL/ExternalDLL/Feature.h
    source/ExternalDLL/ExternalDLL/FeatureMap.cpp
    source/ExternalDLL/ExternalDLL/FeatureMap.h
    source/ExternalDLL/ExternalDLL/GrayscaleAlgorithm.cpp
    source/ExternalDLL/ExternalDLL/GrayscaleAlgorithm.h
    source/ExternalDLL/ExternalDLL/HereBeDragons.cpp
    source/ExternalDLL/ExternalDLL/HereBeDragons.h
    source/ExternalDLL/ExternalDLL/Image.cpp
    source/ExternalDLL/ExternalDLL/Image.h
    source/ExternalDLL/ExternalDLL/ImageFactory.cpp
    source/ExternalDLL/ExternalDLL/ImageFactory.h
    source/ExternalDLL/ExternalDLL/ImageIO.cpp
    source/ExternalDLL/ExternalDLL/ImageIO.h
    source/ExternalDLL/ExternalDLL/IntensityImage.cpp
    source/ExternalDLL/ExternalDLL/IntensityImage.h
    source/ExternalDLL/ExternalDLL/IntensityImagePrivate.cpp
    source/ExternalDLL/ExternalDLL/IntensityImagePrivate.h
    source/ExternalDLL/ExternalDLL/IntensityImageStudent.cpp
    source/ExternalDLL/ExternalDLL/IntensityImageStudent.h
    source/ExternalDLL/ExternalDLL/Localization.h
    source/ExternalDLL/ExternalDLL/Main.cpp
    source/ExternalDLL/ExternalDLL/PixelType.h
    source/ExternalDLL/ExternalDLL/Point2D.h
    source/ExternalDLL/ExternalDLL/PostProcessing.cpp
    source/ExternalDLL/ExternalDLL/PostProcessing.h
    source/ExternalDLL/ExternalDLL/PreProcessing.h
    source/ExternalDLL/ExternalDLL/Representation.cpp
    source/ExternalDLL/ExternalDLL/Representation.h
    source/ExternalDLL/ExternalDLL/RGBImage.cpp
    source/ExternalDLL/ExternalDLL/RGBImage.h
    source/ExternalDLL/ExternalDLL/RGBImagePrivate.cpp
    source/ExternalDLL/ExternalDLL/RGBImagePrivate.h
    source/ExternalDLL/ExternalDLL/RGBImageStudent.cpp
    source/ExternalDLL/ExternalDLL/RGBImageStudent.h
    source/ExternalDLL/ExternalDLL/SonnetXVIII.cpp
    source/ExternalDLL/ExternalDLL/SonnetXVIII.h
    source/ExternalDLL/ExternalDLL/StudentExtraction.cpp
    source/ExternalDLL/ExternalDLL/StudentExtraction.h
    source/ExternalDLL/ExternalDLL/StudentLocalization.cpp
    source/ExternalDLL/ExternalDLL/StudentLocalization.h
    source/ExternalDLL/ExternalDLL/StudentPreProcessing.cpp
    source/ExternalDLL/ExternalDLL/StudentPreProcessing.h)

add_executable(HU_Vision_1516_Base ${SOURCE_FILES})